--- a/src/stylesheets/form.css
+++ b/src/stylesheets/form.css
@@ -121,3 +121,14 @@ input[type="radio"] {
     cursor: pointer;
     accent-color:#995247;
 }
+textarea{
+      width: 300px;
+      height: 150px;
+      padding: 25px;
+      font-size: 16px;
+      border-radius: 5px;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      background-color: #974e41;
+      color: rgb(228, 228, 228);
+      border: 4px solid #552e28;
+}
