--- a/src/stylesheets/seat.css
+++ b/src/stylesheets/seat.css
@@ -29,3 +29,25 @@ h1{
     font-weight: bolder;
     font-size: 2.5em;
 }
+img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 40px;
+    display: block;
+    margin-left: auto;  
+    margin-right: auto;
+    border-style:double;
+    border-width: 5px;
+    border-color: #804339;
+}
+ul{
+    color: rgb(228, 228, 228);
+    font-family:'trebuchet ms', 'lucida sans unicode', 'lucida grande', 'lucida sans', arial, sans-serif;
+    text-align: center;
+    text-decoration: none;
+    list-style-type: none;
+    padding: 0;
+    margin: 10px auto;
+    background-color: rgba(0, 0, 0, 0.6);
+    font-size: large;
+}
